--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "1.5.0",
-        "goalgorilla/open_social": "dev-feature/DS-1937"
+        "goalgorilla/open_social": "dev-8.x-1.x"
     },
     "repositories": [
         {
