--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "cweagans/composer-patches": "1.5.0",
+        "cweagans/composer-patches": "^1.0",
         "goalgorilla/open_social": "^1.0"
     },
     "repositories": [
