--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "^1.0",
-        "goalgorilla/open_social": "^1.0"
+        "goalgorilla/open_social": "^1.0",
+        "doctrine/cache": "1.6.1",
+        "doctrine/collections": "1.4.0",
+        "doctrine/common": "2.7.2",
+        "doctrine/inflector": "1.1.0"
     },
     "repositories": [
         {
