--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require": {
         "composer/installers": "^1.0",
-        "drupal-composer/drupal-scaffold": "^2.0.0",
+        "drupal-composer/drupal-scaffold": "2.4.0",
         "cweagans/composer-patches": "^1.0",
         "goalgorilla/open_social": "^2.0",
         "doctrine/cache": "1.6.1",
