--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,6 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "config": {
-        "platform": {
-            "php": "5.6"
-        }
-    },
     "require": {
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "2.4.0",
@@ -18,6 +13,7 @@
         "doctrine/cache": "1.6.1",
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
+        "php": "^5.6 || ^7.0",
         "doctrine/inflector": "1.1.0"
     },
     "repositories": [
