--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "~2.5.4",
         "cweagans/composer-patches": "^1.0",
-        "goalgorilla/open_social": "^4.0",
+        "goalgorilla/open_social": ">=5.0",
         "doctrine/cache": "1.6.1",
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
