--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "doctrine/collections": "1.4.0",
         "doctrine/common": "2.7.2",
         "php": "^5.6 || ^7.0",
-        "doctrine/inflector": "1.1.0"
+        "doctrine/inflector": "1.1.0",
+        "doctrine/lexer": "1.0.2"
     },
     "repositories": [
         {
