--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "doctrine/common": "2.7.2",
         "php": "^5.6 || ^7.0",
         "doctrine/inflector": "1.1.0",
-        "doctrine/lexer": "1.0.2"
+        "doctrine/lexer": "1.0.2",
+        "monolog/monolog": "^1.17"
     },
     "repositories": [
         {
