Add patchLevel -p2 to drupal/core in composer.json

--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,9 @@
                 "type:drupal-drush"
             ]
         },
-        "enable-patching": true
+        "enable-patching": true,
+        "patchLevel": {
+            "drupal/core": "-p2"
+        }
     }
 }
