Revert "Standardise on `drupal/social`"
This reverts commit 1eec9254f2ad7c8c5b8646b942d6eecf7e133b4b.

We can't publish a working version on Drupal.org yet under the
`drupal/social` name so for now we must keep using
`goalgorilla/open_social` until that's fixed.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "drupal/social": "^10.0",
+        "goalgorilla/open_social": "~10.0.0",
         "php": "^7.2",
         "monolog/monolog": "^1.17"
     },
