--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "goalgorilla/open_social": "~11.4.0",
         "php": "^7.4 || ^8.0",
-        "monolog/monolog": "^2.3.5"
+        "monolog/monolog": "^2.3.5",
+        "drupal/socialbase": "2.3.4 as 2.3.2"
     },
     "repositories": [
         {
