--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "goalgorilla/open_social": "~11.5.0",
-        "php": "^7.4 || ^8.0",
+        "goalgorilla/open_social": "~11.7.0",
+        "php": "^8.0",
         "monolog/monolog": "^2.3.5"
     },
     "repositories": [
