--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "goalgorilla/open_social": "~11.9.0",
+        "goalgorilla/open_social": "^12.0.0-rc1",
         "php": "^8.0",
         "monolog/monolog": "^2.3.5"
     },
